--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Anek+Latin:wght@200;300;500&family=Tiro+Gurmukhi:ital@0;1&display=swap");
 .body {
   background-color: white; }
 
@@ -9,6 +8,11 @@
 .footer a {
   text-decoration: none;
   color: white; }
+
+.footer img {
+  height: 2%;
+  width: 2%;
+  margin: 20px; }
 
 .titulo h1 {
   text-align: center;
