--- a/scss/sections/_mainDos.scss
+++ b/scss/sections/_mainDos.scss
@@ -14,20 +14,59 @@
 }
 
 .container{
-    margin: 20px;
-    padding: 30px;
+    margin: 20px auto;
+    padding: 30px auto;
+    text-align: center;
 }
+.container h4{
+   font-weight: bold;
+   border-bottom: 2px black solid;
+}
+.container h4:hover{
+    color: #424242;
+    transform: scale(1.5);
+    transition: 1s;
+}
+
 .container img {
     height: 300px;
     width: 300px;
-    margin: 10px;
+    margin: 10px auto;
+    align-items: center;
 }
 
 .container p {
     text-align: center;
     margin: 10px auto;
+    padding: 10px;
+}
+.container span{
+    display: flex;
+    justify-content: center;
+    font-size: medium;
 }
 
-.row {
-    background-color: #bebebe;
+.container a{
+    text-decoration: none;
+    color: black;
+    
+    font-size: large;
+}
+
+.container a span:hover{
+    transform: scale(1.9);
+    transition: 1s;
+}
+.container h5{
+    text-align: center;
+}
+
+li{
+    padding: 3px;
+    font-weight: bold;
+    list-style: none;
+}
+li:hover{
+    transform: scale(1.5);
+    transition: 1s;
 }
